--- a/ExtraRoles/ExtraRoles.csproj
+++ b/ExtraRoles/ExtraRoles.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <Version>1.0.0</Version>
+        <Version>1.2.0</Version>
         <GameVersion>2020.12.9s</GameVersion>
         <Mappings>NuclearPowered/Mappings:0.1.0-alpha.2</Mappings>
 
         <Description>A Reactor mod that adds four new roles to the game.</Description>
-        <Authors>js6pak</Authors>
+        <Authors>NotHunter101</Authors>
     </PropertyGroup>
 
     <ItemGroup>
