--- a/ExtraRoles/ExtraRoles.csproj
+++ b/ExtraRoles/ExtraRoles.csproj
@@ -17,7 +17,7 @@
 
     <ItemGroup>
       <Reference Include="Essentials">
-        <HintPath>..\..\..\..\Desktop\Reactor-Essentials-master\Essentials\bin\Debug\netstandard2.1\Essentials.dll</HintPath>
+        <HintPath>$(AmongUs)\BepInEx\plugins\Essentials-$(GameVersion).dll</HintPath>
       </Reference>
     </ItemGroup>
 
