Move update code, continue work on developing each role
Move player update code to it's own Player.Update function, implement Medic shields, implement the Officer's kill button (currently unusable), patch ClosestTarget to easily get the Officer, Medic, and Impostor targets (Instead of doing it manually. This also fixes Officer and Medic being able to use their abilities through walls. It also let me implement shield functionality with a single line, by simply removing them from the targeting list), made it so custom buttons would cancel the PerformKill function (so they can't be used to kill people unintentionally).

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /ExtraRoles/obj
 .vs/ExtraRoles/v16/.suo
 ExtraRoles/.vs
+/ExtraRoles/.idea
 .vs/ExtraRoles/DesignTimeBuild/.dtbcache.v2
 ExtraRoles/Assembly-CSharp.dll
