--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 ExtraRoles/.vs
 .vs/ExtraRoles/DesignTimeBuild/.dtbcache.v2
 ExtraRoles/Assembly-CSharp.dll
+.idea/.idea.ExtraRoles/.idea/.name
+.idea/.idea.ExtraRoles/.idea/encodings.xml
+*.xml
+ExtraRoles.sln.DotSettings.user
+ExtraRoles/.idea/.idea.ExtraRoles2.dir/.idea/.name
+ExtraRoles/.idea/.idea.ExtraRoles2.dir/riderModule.iml
